deployments/production/api.middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: nextplay-production
spec:
  redirectScheme:
    scheme: https
    permanent: true
