deployments/production/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
  namespace: production
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-auth
      containers:
      - name: api
        image: ghcr.io/nextplay-dev/api:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
        resources:
          limits:
            memory: "1524Mi"
            cpu: "30m"
