deployments/production/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: nextplay-production
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '80'
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
