deployments/production/api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: nextplay-production
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: nextplay-production-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: api.nextplay.rigidd.app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-service
            port: 
              number: 80
  tls:
  - hosts:
    - api.nextplay.rigidd.app
    secretName: nextplay-api-tls
